--- a/src/locale/en_GB/LC_MESSAGES/messages.po
+++ b/src/locale/en_GB/LC_MESSAGES/messages.po
@@ -16,7 +16,7 @@ msgstr ""
 "X-Poedit-Language: English\n"
 "X-Poedit-Country: UNITED KINGDOM\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-Basepath: C:\\Users\\Mike\\Downloads\\churchinfo-1.2.12\\churchinfo\\\n"
+"X-Poedit-Basepath: C:\\Users\\Mike\\Downloads\\ChurchCRM-1.2.12\\ChurchCRM\\\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: AutoPaymentEditor.php:372
@@ -57,8 +57,8 @@ msgid "Check"
 msgstr "Cheque"
 
 #: Menu.php:31
-msgid "Welcome to ChurchInfo"
-msgstr "Welcome to ChurchInfo UK version"
+msgid "Welcome to ChurchCRM"
+msgstr "Welcome to ChurchCRM UK version"
 
 #: PledgeEditor.php:543
 msgid "CHECK"
